moved ezsql libs back to aiki source

--- a/src/libs/database/Makefile.am
+++ b/src/libs/database/Makefile.am
@@ -18,13 +18,14 @@
 # Written by Steven Garcia
 
 # The source files
-aiki_src_files =
-
-# Subdirectories to be built
-SUBDIRS =
-
-# Subdirectories to distribute
-DIST_SUBDIRS =
+aiki_src_files = \
+	index.php \
+	mssql.php \
+	mysql.php \
+	oracle8_9.php \
+	pdo.php \
+	postgresql.php \
+	sqlite.php
 
 # Additional files to distribute
 EXTRA_DIST = \
