--- a/src/libs/classes/Makefile.am
+++ b/src/libs/classes/Makefile.am
@@ -19,15 +19,8 @@
 
 # The source files
 aiki_src_files = \
-	image_viewer.php
-
-# Subdirectories to be built
-SUBDIRS = \
-	admin
-
-# Subdirectories to distribute
-DIST_SUBDIRS = \
-	admin
+	dictionaryArrayClass.php \
+	dictionaryTableClass.php
 
 # Additional files to distribute
 EXTRA_DIST = \
@@ -35,7 +28,7 @@ EXTRA_DIST = \
 
 # The directory to put the files
 aiki_srcdir = \
-	$(pkgdatadir)/assets/apps
+	$(pkgdatadir)/libs/classes
 
 # The source data
 aiki_src_DATA = \
